Add installation scripts excplicitly calling python3

--- a/TSSR-GAN_Colab.ipynb
+++ b/TSSR-GAN_Colab.ipynb
@@ -86,8 +86,8 @@
       },
       "source": [
         "% cd /content/TSSR-GAN/\r\n",
-        "! chmod +x scripts/setup.sh\r\n",
-        "! scripts/setup.sh"
+        "! chmod +x scripts/setup_python3.sh\r\n",
+        "! scripts/setup_python3.sh"
       ],
       "execution_count": null,
       "outputs": []
